custom-apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-apache-service
  namespace: ingress-nginx

  labels:
    app: custom-apache
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: custom-apache
